--- a/evaluacion-final/css/styles.css
+++ b/evaluacion-final/css/styles.css
@@ -1,11 +1,13 @@
 @import "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 header, section, footer {
-    font-family: nunito-sans, sans-serif;
+    font-family: 'Lato', sans-serif;
     width: 960px;
     margin-left: auto;
     margin-right: auto;
@@ -551,6 +553,4 @@ body#page-adoptar .lista article .action a {
     body#page-adoptar .lista article img {
         width: 260px;
     }
-    
-
 }
