--- a/evaluacion-final/css/styles.css
+++ b/evaluacion-final/css/styles.css
@@ -128,6 +128,7 @@ nav#menu ul li a:hover {
     align-content: stretch;
     flex-wrap: wrap;
     margin-bottom: 10px;
+    padding-left: 5px;
 }
 
 #cajas ul li p {
