Evaluacion final modulo 1 javascipt lista

--- a/evaluacion1javascript/css/styles.css
+++ b/evaluacion1javascript/css/styles.css
@@ -315,8 +315,8 @@ body#page-adoptar section#main p {
     text-align: center;
 }
 body#page-adoptar section#main p a {
-    background-color:#ffb95f;
-    color:#6b7a8f;
+    background-color:#f7882f;
+    color: #ffff;
 }
 
 body#page-adoptar section#main p a:hover {
